--- a/public/stylesheets/password.css
+++ b/public/stylesheets/password.css
@@ -254,12 +254,22 @@ nav .right {
     padding: 0px;
   }
 
+  .section {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   .signup {
     width: 100%;
   }
 
   .buttons #login-button {
-    font-size: 16px;
+    font-size: 12px;
+  }
+
+  .buttons #signup-button {
+    font-size: 12px;
   }
 
   nav .left h1 {
